// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generatePreset() valid settings 1`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 2`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:AutoTone=\\"True\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 3`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
      <crs:Look>
        <rdf:Description
          crs:Name=\\"Adobe Color\\"
          crs:Amount=\\"1\\"
          crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
          crs:SupportsAmount=\\"false\\"
          crs:SupportsMonochrome=\\"false\\"
          crs:SupportsOutputReferred=\\"false\\"
          crs:Stubbed=\\"true\\"
        />
      </crs:Look>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 4`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:CameraProfile=\\"Custom\\"
      crs:ConvertToGrayscale=\\"False\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 5`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 6`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:Exposure2012=\\"0.00\\"
      crs:Contrast2012=\\"0\\"
      crs:Highlights2012=\\"0\\"
      crs:Shadows2012=\\"0\\"
      crs:Whites2012=\\"0\\"
      crs:Blacks2012=\\"0\\"
      crs:ToneCurveName2012=\\"Linear\\"
      crs:ParametricShadows=\\"0\\"
      crs:ParametricDarks=\\"0\\"
      crs:ParametricLights=\\"0\\"
      crs:ParametricHighlights=\\"0\\"
      crs:ParametricShadowSplit=\\"25\\"
      crs:ParametricMidtoneSplit=\\"50\\"
      crs:ParametricHighlightSplit=\\"75\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
      <crs:ToneCurvePV2012>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012>
      <crs:ToneCurvePV2012Red>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Red>
      <crs:ToneCurvePV2012Green>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Green>
      <crs:ToneCurvePV2012Blue>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Blue>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 7`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:ToneCurveName2012=\\"Linear\\"
      crs:ParametricShadows=\\"0\\"
      crs:ParametricDarks=\\"0\\"
      crs:ParametricLights=\\"0\\"
      crs:ParametricHighlights=\\"0\\"
      crs:ParametricShadowSplit=\\"25\\"
      crs:ParametricMidtoneSplit=\\"50\\"
      crs:ParametricHighlightSplit=\\"75\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
      <crs:ToneCurvePV2012>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012>
      <crs:ToneCurvePV2012Red>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Red>
      <crs:ToneCurvePV2012Green>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Green>
      <crs:ToneCurvePV2012Blue>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Blue>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 8`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:ToneCurveName2012=\\"Medium Contrast\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
      <crs:ToneCurvePV2012>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>32, 22</rdf:li>
          <rdf:li>64, 56</rdf:li>
          <rdf:li>128, 128</rdf:li>
          <rdf:li>192, 196</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012>
      <crs:ToneCurvePV2012Red>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Red>
      <crs:ToneCurvePV2012Green>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Green>
      <crs:ToneCurvePV2012Blue>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Blue>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 9`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:ToneCurveName2012=\\"Strong Contrast\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
      <crs:ToneCurvePV2012>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>32, 16</rdf:li>
          <rdf:li>64, 50</rdf:li>
          <rdf:li>128, 128</rdf:li>
          <rdf:li>192, 202</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012>
      <crs:ToneCurvePV2012Red>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Red>
      <crs:ToneCurvePV2012Green>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Green>
      <crs:ToneCurvePV2012Blue>
        <rdf:Seq>
          <rdf:li>0, 0</rdf:li>
          <rdf:li>255, 255</rdf:li>
        </rdf:Seq>
      </crs:ToneCurvePV2012Blue>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 10`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 11`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:WhiteBalance=\\"As Shot\\"
      crs:Vibrance=\\"0\\"
      crs:Saturation=\\"0\\"
      crs:HueAdjustmentRed=\\"0\\"
      crs:SaturationAdjustmentRed=\\"0\\"
      crs:LuminanceAdjustmentRed=\\"0\\"
      crs:HueAdjustmentOrange=\\"0\\"
      crs:SaturationAdjustmentOrange=\\"0\\"
      crs:LuminanceAdjustmentOrange=\\"0\\"
      crs:HueAdjustmentYellow=\\"0\\"
      crs:SaturationAdjustmentYellow=\\"0\\"
      crs:LuminanceAdjustmentYellow=\\"0\\"
      crs:HueAdjustmentGreen=\\"0\\"
      crs:SaturationAdjustmentGreen=\\"0\\"
      crs:LuminanceAdjustmentGreen=\\"0\\"
      crs:HueAdjustmentAqua=\\"0\\"
      crs:SaturationAdjustmentAqua=\\"0\\"
      crs:LuminanceAdjustmentAqua=\\"0\\"
      crs:HueAdjustmentBlue=\\"0\\"
      crs:SaturationAdjustmentBlue=\\"0\\"
      crs:LuminanceAdjustmentBlue=\\"0\\"
      crs:HueAdjustmentPurple=\\"0\\"
      crs:SaturationAdjustmentPurple=\\"0\\"
      crs:LuminanceAdjustmentPurple=\\"0\\"
      crs:HueAdjustmentMagenta=\\"0\\"
      crs:SaturationAdjustmentMagenta=\\"0\\"
      crs:LuminanceAdjustmentMagenta=\\"0\\"
      crs:SplitToningShadowHue=\\"0\\"
      crs:SplitToningShadowSaturation=\\"0\\"
      crs:ColorGradeShadowLum=\\"0\\"
      crs:ColorGradeMidtoneHue=\\"0\\"
      crs:ColorGradeMidtoneSat=\\"0\\"
      crs:ColorGradeMidtoneLum=\\"0\\"
      crs:SplitToningHighlightHue=\\"0\\"
      crs:SplitToningHighlightSaturation=\\"0\\"
      crs:ColorGradeHighlightLum=\\"0\\"
      crs:ColorGradeGlobalHue=\\"0\\"
      crs:ColorGradeGlobalSat=\\"0\\"
      crs:ColorGradeGlobalLum=\\"0\\"
      crs:ColorGradeBlending=\\"50\\"
      crs:SplitToningBalance=\\"0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 12`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:WhiteBalance=\\"As Shot\\"
      crs:HueAdjustmentRed=\\"0\\"
      crs:SaturationAdjustmentRed=\\"0\\"
      crs:LuminanceAdjustmentRed=\\"0\\"
      crs:HueAdjustmentOrange=\\"0\\"
      crs:SaturationAdjustmentOrange=\\"0\\"
      crs:LuminanceAdjustmentOrange=\\"0\\"
      crs:HueAdjustmentYellow=\\"0\\"
      crs:SaturationAdjustmentYellow=\\"0\\"
      crs:LuminanceAdjustmentYellow=\\"0\\"
      crs:HueAdjustmentGreen=\\"0\\"
      crs:SaturationAdjustmentGreen=\\"0\\"
      crs:LuminanceAdjustmentGreen=\\"0\\"
      crs:HueAdjustmentAqua=\\"0\\"
      crs:SaturationAdjustmentAqua=\\"0\\"
      crs:LuminanceAdjustmentAqua=\\"0\\"
      crs:HueAdjustmentBlue=\\"0\\"
      crs:SaturationAdjustmentBlue=\\"0\\"
      crs:LuminanceAdjustmentBlue=\\"0\\"
      crs:HueAdjustmentPurple=\\"0\\"
      crs:SaturationAdjustmentPurple=\\"0\\"
      crs:LuminanceAdjustmentPurple=\\"0\\"
      crs:HueAdjustmentMagenta=\\"0\\"
      crs:SaturationAdjustmentMagenta=\\"0\\"
      crs:LuminanceAdjustmentMagenta=\\"0\\"
      crs:SplitToningShadowHue=\\"0\\"
      crs:SplitToningShadowSaturation=\\"0\\"
      crs:ColorGradeShadowLum=\\"0\\"
      crs:ColorGradeMidtoneHue=\\"0\\"
      crs:ColorGradeMidtoneSat=\\"0\\"
      crs:ColorGradeMidtoneLum=\\"0\\"
      crs:SplitToningHighlightHue=\\"0\\"
      crs:SplitToningHighlightSaturation=\\"0\\"
      crs:ColorGradeHighlightLum=\\"0\\"
      crs:ColorGradeGlobalHue=\\"0\\"
      crs:ColorGradeGlobalSat=\\"0\\"
      crs:ColorGradeGlobalLum=\\"0\\"
      crs:ColorGradeBlending=\\"50\\"
      crs:SplitToningBalance=\\"0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 13`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:WhiteBalance=\\"Custom\\"
      crs:Temperature=\\"6500\\"
      crs:Tint=\\"0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 14`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 15`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:Texture=\\"0\\"
      crs:Clarity2012=\\"0\\"
      crs:Dehaze=\\"0\\"
      crs:OverrideLookVignette=\\"False\\"
      crs:PostCropVignetteAmount=\\"0\\"
      crs:GrainAmount=\\"0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 16`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:OverrideLookVignette=\\"True\\"
      crs:PostCropVignetteAmount=\\"-100\\"
      crs:PostCropVignetteMidpoint=\\"50\\"
      crs:PostCropVignetteRoundness=\\"0\\"
      crs:PostCropVignetteFeather=\\"50\\"
      crs:PostCropVignetteStyle=\\"1\\"
      crs:PostCropVignetteHighlightContrast=\\"0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 17`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:OverrideLookVignette=\\"True\\"
      crs:PostCropVignetteAmount=\\"100\\"
      crs:PostCropVignetteMidpoint=\\"50\\"
      crs:PostCropVignetteRoundness=\\"0\\"
      crs:PostCropVignetteFeather=\\"50\\"
      crs:PostCropVignetteStyle=\\"1\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 18`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:GrainAmount=\\"100\\"
      crs:GrainSize=\\"25\\"
      crs:GrainFrequency=\\"50\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 19`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 20`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:Sharpness=\\"40\\"
      crs:SharpenRadius=\\"1.0\\"
      crs:SharpenDetail=\\"25\\"
      crs:SharpenEdgeMasking=\\"0\\"
      crs:LuminanceSmoothing=\\"0\\"
      crs:ColorNoiseReduction=\\"25\\"
      crs:ColorNoiseReductionDetail=\\"50\\"
      crs:ColorNoiseReductionSmoothness=\\"50\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 21`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:Sharpness=\\"0\\"
      crs:LuminanceSmoothing=\\"100\\"
      crs:LuminanceNoiseReductionDetail=\\"50\\"
      crs:LuminanceNoiseReductionContrast=\\"0\\"
      crs:ColorNoiseReduction=\\"0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 22`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 23`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:AutoLateralCA=\\"0\\"
      crs:LensProfileEnable=\\"0\\"
      crs:DefringePurpleAmount=\\"0\\"
      crs:DefringeGreenAmount=\\"0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 24`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:AutoLateralCA=\\"1\\"
      crs:LensProfileEnable=\\"1\\"
      crs:LensProfileSetup=\\"LensDefaults\\"
      crs:DefringePurpleAmount=\\"20\\"
      crs:DefringePurpleHueLo=\\"30\\"
      crs:DefringePurpleHueHi=\\"70\\"
      crs:DefringeGreenAmount=\\"20\\"
      crs:DefringeGreenHueLo=\\"40\\"
      crs:DefringeGreenHueHi=\\"60\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 25`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 26`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:PerspectiveUpright=\\"0\\"
      crs:LensManualDistortionAmount=\\"0\\"
      crs:PerspectiveVertical=\\"0\\"
      crs:PerspectiveHorizontal=\\"0\\"
      crs:PerspectiveRotate=\\"0.0\\"
      crs:PerspectiveAspect=\\"0\\"
      crs:PerspectiveScale=\\"100\\"
      crs:PerspectiveX=\\"0.0\\"
      crs:PerspectiveY=\\"0.0\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 27`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:PerspectiveUpright=\\"1\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 28`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:PerspectiveUpright=\\"2\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 29`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:PerspectiveUpright=\\"3\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;

exports[`generatePreset() valid settings 30`] = `
"<x:xmpmeta xmlns:x=\\"adobe:ns:meta/\\">
  <rdf:RDF xmlns:rdf=\\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\\">
    <rdf:Description
      xmlns:crs=\\"http://ns.adobe.com/camera-raw-settings/1.0/\\"
      crs:PresetType=\\"Normal\\"
      crs:UUID=\\"ABCDEFGHIJKLMNOPQRSTUVWXYZ123456\\"
      crs:Version=\\"13.3\\"
      crs:ProcessVersion=\\"11.0\\"
      crs:PerspectiveUpright=\\"4\\"
    >
      <crs:Name>
        <rdf:Alt>
          <rdf:li xml:lang=\\"x-default\\">Test</rdf:li>
        </rdf:Alt>
      </crs:Name>
    </rdf:Description>
  </rdf:RDF>
</x:xmpmeta>
"
`;
